--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "dependencies": {
     "@notionhq/client": "^2.2.14",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
+    "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.312.0",
     "next": "14.1.0",
+    "notion-to-md": "^3.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "reading-time": "^1.5.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
