--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "db:migrate": "node scripts/run-migrations.js",
     "test:redis": "node scripts/test-redis.js",
-    "test:playwright": "node scripts/test-playwright.js",
+    "test:playwright": "node scripts/test-playwright-api.js",
     "test:environment": "node scripts/verify-environment.js",
     "setup:scraping": "npm run test:environment && npm run test:redis && npm run test:playwright",
     "start:redis": "scripts\\start-redis.bat",
@@ -25,7 +25,7 @@
     "scrape:start": "node scripts/start-scraping.js",
     "monitor": "node scripts/monitor-progress.js",
     "start:scraping": "concurrently \"npm run dev\" \"npm run worker\" \"npm run monitor\"",
-    "test:adaptive": "node scripts/test-adaptive-system.js",
+    "test:adaptive": "node scripts/test-adaptive-scraper.js",
     "test:adaptive-simple": "node scripts/test-adaptive-simple.js",
     "test:connectivity": "node scripts/test-connectivity.js",
     "test:auth": "node scripts/diagnose-auth.js",
@@ -37,13 +37,28 @@
     "monitor:flow:watch": "node scripts/monitor-data-flow.js --watch",
     "test:insertion": "node scripts/test-data-insertion.js",
     "test:single-job": "node scripts/test-single-job.js",
-    "test:adaptive": "node scripts/test-adaptive-scraper.js",
-    "test:playwright": "node scripts/test-playwright-direct.js",
     "debug:worker": "SET DEBUG=* && node scripts/worker.js",
     "scrape:enhanced": "node scripts/scrape-flippa-enhanced.js",
     "scrape:visual": "node scripts/scrape-flippa-visual.js",
     "scrape:inspect": "node scripts/inspect-flippa-structure.js",
-    "worker:simple": "node scripts/worker-flippa-simple.js"
+    "worker:simple": "node scripts/worker-flippa-simple.js",
+    "scrape:complete": "node scripts/scrape-flippa-complete.js",
+    "worker:scheduler": "node scripts/worker-flippa-scheduler.js",
+    "test:scraping": "node scripts/test-complete-scraping.js",
+    "test:timeout": "node scripts/test-timeout-fix.js",
+    "test:multipage": "node scripts/test-multipage-scraping.js",
+    "test:nextpage-fix": "node scripts/test-hasNextPage-fix.js",
+    "test:filter-persistence": "node scripts/test-filter-persistence.js",
+    "test:selector-fix": "node scripts/test-selector-fix.js",
+    "scrape:insights": "node scripts/flippa-scraper-insight-driven.js",
+    "test:insights": "node scripts/test-insight-driven-scraper.js",
+    "worker:insights": "node scripts/worker-flippa-insights.js",
+    "scrape:flippa": "node scripts/flippa-complete-system.js",
+    "scrape:flippa:test": "node scripts/flippa-scraper-engine.js --test",
+    "scrape:flippa:scheduler": "node scripts/flippa-scheduler.js",
+    "monitor:flippa": "open http://localhost:3000/admin/scraping",
+    "test:flippa:fixed": "node scripts/test-flippa-scraper-fixed.js",
+    "test:flippa:optimize": "node scripts/test-flippa-optimization.js"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14",
@@ -60,8 +75,11 @@
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "ioredis": "^5.7.0",
+    "joi": "^17.13.3",
     "lucide-react": "^0.312.0",
+    "moment": "^2.30.1",
     "next": "14.1.0",
+    "node-cron": "^3.0.3",
     "notion-to-md": "^3.1.9",
     "p-limit": "^4.0.0",
     "playwright": "^1.54.1",
